hive_functional test move to tests/hived dir
because hive_functionals test only api supported by hived (not hivemind)
then the tests were moved to hived subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,4 +282,4 @@ endif(MSVC)
 
 #add_subdirectory( generate_empty_blocks )
 add_subdirectory(api_tests)
-add_subdirectory(hive_functional)
+add_subdirectory(hived/hive_functional)
