api and unit tests works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ include(common/api_tests.cmake)
 
 ENABLE_TESTING()
 
-add_subdirectory(unit)
-add_subdirectory(hived/api_tests)
-add_subdirectory(hived/hive_functional)
+IF ( BUILD_HIVE_TESTNET )
+    add_subdirectory(unit)
+    add_subdirectory(hived/hive_functional)
+ELSE ( BUILD_HIVE_TESTNET )
+    add_subdirectory(hived/api_tests)
+ENDIF ( BUILD_HIVE_TESTNET )
