--- a/hivemind/pyrest_tests/benchmarks/database_api_benchmark.yaml
+++ b/hivemind/pyrest_tests/benchmarks/database_api_benchmark.yaml
@@ -26,7 +26,7 @@
     - name: "list_comments"
     - variable_binds:
       - method: "list_comments"
-      - args: '{"start":["steemit","firstpost","",""], "limit":10, "order":"by_permlink"}'
+      - args: '{"start":["steemit","firstpost"], "limit":10, "order":"by_permlink"}'
     - <<: *base_benchmark
   
   - benchmark:
