add condenser api get_active_votes test

--- a/hivemind/pyrest_tests/5000000/condenser_api/condenser_api_test.yaml
+++ b/hivemind/pyrest_tests/5000000/condenser_api/condenser_api_test.yaml
@@ -192,3 +192,10 @@
 #      - method: "get_account_votes"
 #      - args: '["steemit"]'
 #    - <<: *base_test
+
+  - test:
+      - name: "get_active_votes"
+      - variable_binds:
+          - method: "get_active_votes"
+          - args: '["biophil","test"]'
+      - <<: *base_test
