--- a/hivemind/pyrest_tests/5000000/tags_api/tags_api_test.yaml
+++ b/hivemind/pyrest_tests/5000000/tags_api/tags_api_test.yaml
@@ -20,90 +20,82 @@
       - compare: {jsonpath_mini: "id", comparator: "str_eq", expected: {template: $test_id}}
       - json_file_validator: {jsonpath_mini: "result", comparator: "json_compare", expected: {template: '5000000/$api/$method'}}
 
-# it fails
-#  - test:
-#    - name: "get_discussion"
-#    - variable_binds:
-#      - method: "get_discussion"
-#      - args: '{"author":"steemit", "permlink":"firstpost"}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussion"
+    - variable_binds:
+      - method: "get_discussion"
+      - args: '{"author":"steemit", "permlink":"firstpost"}'
+    - <<: *base_test
 
   - test:
     - name: "get_content_replies"
     - variable_binds:
       - method: "get_content_replies"
-      - args: '{"author":"alice", "permlink":"firstpost"}'
+      - args: '{"author":"admin", "permlink":"firstpost"}'
     - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_trending"
-#    - variable_binds:
-#      - method: "get_discussions_by_trending"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_trending"
+    - variable_binds:
+      - method: "get_discussions_by_trending"
+      - args: '{"tag":"polska","limit":1}'
+    - <<: *base_test
 
-# if fails
-#  - test:
-#    - name: "get_discussions_by_hot"
-#    - variable_binds:
-#      - method: "get_discussions_by_hot"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_hot"
+    - variable_binds:
+      - method: "get_discussions_by_hot"
+      - args: '{"tag":"polska","limit":1}'
+    - <<: *base_test
 
   - test:
     - name: "get_discussions_by_promoted"
     - variable_binds:
       - method: "get_discussions_by_promoted"
+      - args: '{"tag":"steem","limit":1}'
+    - <<: *base_test
+
+  - test:
+    - name: "get_discussions_by_created"
+    - variable_binds:
+      - method: "get_discussions_by_created"
       - args: '{"tag":"polska","limit":1}'
     - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_created"
-#    - variable_binds:
-#      - method: "get_discussions_by_created"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
-
-# it fails
-#  - test:
-#    - name: "get_discussions_by_blog"
-#    - variable_binds:
-#      - method: "get_discussions_by_blog"
-#      - args: '{"tag":"steemit","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_blog"
+    - variable_binds:
+      - method: "get_discussions_by_blog"
+      - args: '{"tag":"steemit","limit":1}'
+    - <<: *base_test
 
   - test:
     - name: "get_discussions_by_comments"
     - variable_binds:
       - method: "get_discussions_by_comments"
-      - args: '{"start_author":"steemit","start_permlink":"firstpost","limit":1}'
+      - args: '{"start_author":"admin","start_permlink":"firstpost","limit":1}'
     - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_author_before_date"
-#    - variable_binds:
-#      - method: "get_discussions_by_author_before_date"
-#      - args: '{"author":"steemit","start_permlink":"firstpost","before_date":"2016-04-19T22:49:43","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_author_before_date"
+    - variable_binds:
+      - method: "get_discussions_by_author_before_date"
+      - args: '{"author":"steemit","start_permlink":"firstpost","before_date":"2016-04-19T22:49:43","limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_post_discussions_by_payout"
-#    - variable_binds:
-#      - method: "get_post_discussions_by_payout"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_post_discussions_by_payout"
+    - variable_binds:
+      - method: "get_post_discussions_by_payout"
+      - args: '{"tag":"polska","limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_comment_discussions_by_payout"
-#    - variable_binds:
-#      - method: "get_comment_discussions_by_payout"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_comment_discussions_by_payout"
+    - variable_binds:
+      - method: "get_comment_discussions_by_payout"
+      - args: '{"tag":"polska","limit":1}'
+    - <<: *base_test
 
 # Not found
 #  - test:
@@ -153,7 +145,7 @@
 #      - args: '{"tag":"steem","limit":1}'
 #    - <<: *base_test
 
-# No longer supported
+# No longer supported (replaced by database_api.list_votes)
 #  - test:
 #    - name: "get_account_votes"
 #    - variable_binds:
