--- a/hivemind/pyrest_tests/5000000/follow_api/follow_api_test.yaml
+++ b/hivemind/pyrest_tests/5000000/follow_api/follow_api_test.yaml
@@ -31,7 +31,7 @@
     - name: "get_following"
     - variable_binds:
       - method: "get_following"
-      - args: '{"account":"steemit","start":null,"type":"blog","limit":10}'
+      - args: '{"account":"proskynneo","start":null,"type":"blog","limit":10}'
     - <<: *base_test
 
   - test:
@@ -48,22 +48,21 @@
       - args: '{"account_lower_bound": "steem", "limit":1}'
     - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_blog"
-#    - variable_binds:
-#      - method: "get_blog"
-#      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_blog"
+    - variable_binds:
+      - method: "get_blog"
+      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_blog_entries"
-#    - variable_binds:
-#      - method: "get_blog_entries"
-#      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_blog_entries"
+    - variable_binds:
+      - method: "get_blog_entries"
+      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
+    - <<: *base_test
 
+# reblogs started past 5mln blocks
   - test:
     - name: "get_reblogged_by"
     - variable_binds:
