--- a/hivemind/pyrest_tests/5000000/condenser_api/condenser_api_test.yaml
+++ b/hivemind/pyrest_tests/5000000/condenser_api/condenser_api_test.yaml
@@ -31,7 +31,7 @@
     - name: "get_following"
     - variable_binds:
       - method: "get_following"
-      - args: '["steemit",null,"blog",10]'
+      - args: '["proskynneo",null,"blog",10]'
     - <<: *base_test
 
   - test:
@@ -41,78 +41,71 @@
       - args: '["steemit"]'
     - <<: *base_test
 
-# it fail
-#  - test:
-#    - name: "get_content"
-#    - variable_binds:
-#      - method: "get_content"
-#      - args: '["steemit", "firstpost"]'
-#    - <<: *base_test
+  - test:
+    - name: "get_content"
+    - variable_binds:
+      - method: "get_content"
+      - args: '["steemit", "firstpost"]'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_content_replies"
-#    - variable_binds:
-#      - method: "get_content_replies"
-#      - args: '["gtg", "hello-world"]'
-#    - <<: *base_test
+  - test:
+    - name: "get_content_replies"
+    - variable_binds:
+      - method: "get_content_replies"
+      - args: '["gtg", "hello-world"]'
+    - <<: *base_test
 
 # Dynamic data present
-#  - test:
-#    - name: "get_state"
-#    - variable_binds:
-#      - method: "get_state"
-#      - args: '["/@steemit"]'
-#    - <<: *base_test
+  - test:
+    - name: "get_state"
+    - variable_binds:
+      - method: "get_state"
+      - args: '["/@steemit"]'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_trending_tags"
-#    - variable_binds:
-#      - method: "get_trending_tags"
-#      - args: '{"start_tag":"steem","limit":10}'
-#    - <<: *base_test
+  - test:
+    - name: "get_trending_tags"
+    - variable_binds:
+      - method: "get_trending_tags"
+      - args: '["steem",10]'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_trending"
-#    - variable_binds:
-#      - method: "get_discussions_by_trending"
-#      - args: '{"tag":"steem","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_trending"
+    - variable_binds:
+      - method: "get_discussions_by_trending"
+      - args: '{"tag":"steem","limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_hot"
-#    - variable_binds:
-#      - method: "get_discussions_by_hot"
-#      - args: '{"tag":"steem","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_hot"
+    - variable_binds:
+      - method: "get_discussions_by_hot"
+      - args: '{"tag":"steem","limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_promoted"
-#    - variable_binds:
-#      - method: "get_discussions_by_promoted"
-#      - args: '{"tag":"steem","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_promoted"
+    - variable_binds:
+      - method: "get_discussions_by_promoted"
+      - args: '{"tag":"steem","limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_discussions_by_created"
-#    - variable_binds:
-#      - method: "get_discussions_by_created"
-#      - args: '{"tag":"steem","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_created"
+    - variable_binds:
+      - method: "get_discussions_by_created"
+      - args: '{"tag":"steem","limit":1}'
+    - <<: *base_test
 
-# if fails
-#  - test:
-#    - name: "get_discussions_by_blog"
-#    - variable_binds:
-#      - method: "get_discussions_by_blog"
-#      - args: '{"tag":"steemit","start_author":"steemit","start_permlink":"firstpost","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_blog"
+    - variable_binds:
+      - method: "get_discussions_by_blog"
+      - args: '{"tag":"steemit","start_author":"steemit","start_permlink":"firstpost","limit":1}'
+    - <<: *base_test
 
+# can't find any params that would give nonempty results
   - test:
     - name: "get_discussions_by_feed"
     - variable_binds:
@@ -124,56 +117,50 @@
     - name: "get_discussions_by_comments"
     - variable_binds:
       - method: "get_discussions_by_comments"
-      - args: '{"start_author":"steemit","start_permlink":"firstpost","limit":1}'
+      - args: '{"start_author":"admin","start_permlink":"firstpost","limit":1}'
     - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_replies_by_last_update"
-#    - variable_binds:
-#      - method: "get_replies_by_last_update"
-#      - args: '["steemit","firstpost",1]'
-#    - <<: *base_test
+  - test:
+    - name: "get_replies_by_last_update"
+    - variable_binds:
+      - method: "get_replies_by_last_update"
+      - args: '["admin","firstpost",1]'
+    - <<: *base_test
 
-# if fails
-#  - test:
-#    - name: "get_discussions_by_author_before_date"
-#    - variable_binds:
-#      - method: "get_discussions_by_author_before_date"
-#      - args: '{"author":"steemit","start_permlink":"firstpost","before_date":"2016-04-19T22:49:43","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_discussions_by_author_before_date"
+    - variable_binds:
+      - method: "get_discussions_by_author_before_date"
+      - args: '{"author":"steemit","start_permlink":"firstpost","before_date":"2016-04-19T22:49:43","limit":1}'
+    - <<: *base_test
 
-# if fails
-#  - test:
-#    - name: "get_post_discussions_by_payout"
-#    - variable_binds:
-#      - method: "get_post_discussions_by_payout"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_post_discussions_by_payout"
+    - variable_binds:
+      - method: "get_post_discussions_by_payout"
+      - args: '{"tag":"polska","limit":1}'
+    - <<: *base_test
 
-# if fails
-#  - test:
-#    - name: "get_comment_discussions_by_payout"
-#    - variable_binds:
-#      - method: "get_comment_discussions_by_payout"
-#      - args: '{"tag":"polska","limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_comment_discussions_by_payout"
+    - variable_binds:
+      - method: "get_comment_discussions_by_payout"
+      - args: '{"tag":"polska","limit":1}'
+    - <<: *base_test
 
-# if fails
-#  - test:
-#    - name: "get_blog"
-#    - variable_binds:
-#      - method: "get_blog"
-#      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_blog"
+    - variable_binds:
+      - method: "get_blog"
+      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
+    - <<: *base_test
 
-# it fails
-#  - test:
-#    - name: "get_blog_entries"
-#    - variable_binds:
-#      - method: "get_blog_entries"
-#      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
-#    - <<: *base_test
+  - test:
+    - name: "get_blog_entries"
+    - variable_binds:
+      - method: "get_blog_entries"
+      - args: '{"account":"steemit","start_entry_id":0,"limit":1}'
+    - <<: *base_test
 
   - test:
     - name: "get_account_reputations"
@@ -182,6 +169,7 @@
       - args: '["steemit", 1]'
     - <<: *base_test
 
+# reblogging started a bit after 5mln blocks so there can't be nonempty result here
   - test:
     - name: "get_reblogged_by"
     - variable_binds:
