Added response validator to tavern smoketests
- Response validator has been added: it validates if error or result
  fields are present in response. Occurence of error field will fail
  the given test.
- In order for validator to work a path to test directory must be added
  to PYTHONPATH i.e you can run py.test from inside of tavern dir using:
  PYTHONPATH=$PYTHONPATH:$(pwd) py.test -v

--- a/hivemind/tavern/test_bridge_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_smoketest.tavern.yaml
@@ -270,6 +270,8 @@
           params: {"limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.list_community_roles smoke test
@@ -291,6 +293,8 @@
           params: {"community":"hive-123456"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.list_subscribers smoke test
@@ -312,6 +316,8 @@
           params: {"community":"hive-123456"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.list_all_subscriptions smoke test
@@ -333,3 +339,5 @@
           params: {"account":"steemit"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
