--- a/hivemind/tavern/test_hive_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_hive_api_smoketest.tavern.yaml
@@ -18,3 +18,5 @@
           params: {}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
