--- a/hivemind/tavern/test_condenser_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_smoketest.tavern.yaml
@@ -18,6 +18,8 @@
           params: ["steemit",null,"blog",10]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_following smoke test
@@ -39,6 +41,8 @@
           params: ["steemit",null,"blog",10]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_follow_count smoke test
@@ -60,6 +64,8 @@
           params: ["steemit"]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_content smoke test
@@ -81,6 +87,8 @@
           params: ["gtg", "hello-world"]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_state smoke test
@@ -102,6 +110,8 @@
           params: ["/@steemit"]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_trending_tags smoke test
@@ -123,6 +133,8 @@
           params: {"start_tag":"polska","limit":10}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_trending smoke test
@@ -144,6 +156,8 @@
           params: {"tag":"polska","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_hot smoke test
@@ -165,6 +179,8 @@
           params: {"tag":"polska","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_promoted smoke test
@@ -186,6 +202,8 @@
           params: {"tag":"polska","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_created smoke test
@@ -207,6 +225,8 @@
           params: {"tag":"polska","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_blog smoke test
@@ -228,6 +248,8 @@
           params: {"tag":"blocktrades","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_feed smoke test
@@ -249,6 +271,8 @@
           params: {"tag":"blocktrades","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_comments smoke test
@@ -270,6 +294,8 @@
           params: {"start_author":"steemit","start_permlink":"firstpost","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_replies_by_last_update smoke test
@@ -291,6 +317,8 @@
           params: ["steemit","firstpost",1]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_discussions_by_author_before_date smoke test
@@ -312,6 +340,8 @@
           params: {"author":"steemit","start_permlink":"firstpost","before_date":"2016-04-19T22:49:43","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_post_discussions_by_payout smoke test
@@ -333,6 +363,8 @@
           params: {"tag":"polska","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_comment_discussions_by_payout smoke test
@@ -354,6 +386,8 @@
           params: {"tag":"polska","limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_blog smoke test
@@ -375,6 +409,8 @@
           params: {"account":"steemit","start_entry_id":0,"limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_blog_entries smoke test
@@ -396,6 +432,8 @@
           params: {"account":"steemit","start_entry_id":0,"limit":1}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_account_reputations smoke test
@@ -417,6 +455,8 @@
           params: ["steemit", 1]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_reblogged_by smoke test
@@ -438,6 +478,8 @@
           params: {"author":"steemit","permlink":"firstpost"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind condenser_api.get_accounts smoke test
@@ -459,3 +501,5 @@
           params: [["steemit"]]
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
