--- a/hivemind/tavern/test_bridge_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_smoketest.tavern.yaml
@@ -18,6 +18,8 @@
           params: {"author":"steemit", "permlink":"firstpost"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_discussion smoke test
@@ -39,6 +41,8 @@
           params: {"author":"steemit", "permlink":"firstpost"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_post smoke test
@@ -60,6 +64,8 @@
           params: {"author":"steemit", "permlink":"firstpost"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_account_posts smoke test
@@ -81,6 +87,8 @@
           params: {"sort":"posts", "account":"steemit"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_ranked_posts smoke test
@@ -102,6 +110,8 @@
           params: {"sort":"trending","tag":"","observer":"steemit"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_profile smoke test
@@ -123,6 +133,8 @@
           params: {"account":"steemit"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_trending_topics smoke test
@@ -144,6 +156,8 @@
           params: {}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.post_notifications smoke test
@@ -165,6 +179,8 @@
           params: {"author":"steemit", "permlink":"firstpost"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.account_notifications smoke test
@@ -186,6 +202,8 @@
           params: {"account":"steemit","limit":100}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.unread_notifications smoke test
@@ -207,6 +225,8 @@
           params: {"account":"steemit"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_payout_stats smoke test
@@ -228,6 +248,8 @@
           params: {}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.get_community smoke test
@@ -249,6 +271,8 @@
           params: {"name":"hive-123456", "account":"steemit"}
       response:
         status_code: 200
+        verify_response_with:
+          function: validate_response:validate_response
 
 ---
   test_name: Hivemind bridge_api.list_communities smoke test
